--- a/Module_4/style.css
+++ b/Module_4/style.css
@@ -3,13 +3,13 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f0ddd5;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #F2F2F2;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: #04ADBF;
 }
 
 .topnav a {
@@ -20,15 +20,16 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-weight: bold;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #04ADBF;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #2196F3;
+  background-color: #F24452;
   color: white;
 }
 
@@ -48,7 +49,7 @@ body {
   padding: 6px 10px;
   margin-top: 8px;
   margin-right: 16px;
-  background: #ddd;
+  background: #F24452;
   font-size: 17px;
   border: none;
   cursor: pointer;
@@ -83,13 +84,13 @@ body {
   margin: auto;
 }
 header {
-  background-color: #3ea9dd;
+  background-color: ##04ADBF;
   padding: 1rem;
   color: #fff;
 }
 
 main {
-  background-color: #fff;
+  background-color:  #F2F2F2;
   padding: 1rem;
 }
 
@@ -104,15 +105,14 @@ article {
   width: calc(100% / 3 - 2rem);
   box-sizing: border-box;
   cursor: pointer;
-  border: 1px #ccc solid;
   padding: 1rem;
-  border-radius: 6px;
+  background-color: #F2F2F2;
+  color: #261E14;
   transition: all 0.2s ease-in-out;
 }
 
 article:hover {
   transform: scale(1.02);
-  box-shadow: 0px 0px 2px #ccc;
 }
 
 article h2 {
@@ -134,11 +134,7 @@ figcaption {
   text-align: center;
 }
 
-footer {
-  background-color: #3ea9dd;
-  text-align: center;
-  padding: 1rem;
-}
+
 dialog {
   margin: auto;
   width: 80%;
@@ -163,7 +159,7 @@ dialog span {
   right: 2rem;
   font-size: 2rem;
   text-decoration: none;
-  color: #ff0000;
+  color: ##04ADBF;
   filter: drop-shadow(2px 2px 2px #000);
 }
 iframe {
